add rnd lib and changes by info FindBugs